<resources>
    <string name="app_name">Android Project Chess20</string>
    <string name="undo_button">undo</string>
    <string name="restart_button">Restart Game</string>
    <string name="playback">Replay Records</string>
    <string name="draw_game">draw</string>
    <string name="resign_game">resign</string>
    <string name="AI_button">AI</string>
    <string name="startText">startText</string>
    <string name="finishText">finishText</string>
    <string name="promotionText">Queue Pawn Promotions:</string>
    <string name="a1">a1</string>
    <string name="a2">a2</string>
    <string name="a3">a3</string>
    <string name="a4">a4</string>
    <string name="a5">a5</string>
    <string name="a6">a6</string>
    <string name="a7">a7</string>
    <string name="a8">a8</string>
    <string name="b1">b1</string>
    <string name="b2">b2</string>
    <string name="b3">b3</string>
    <string name="b4">b4</string>
    <string name="b5">b5</string>
    <string name="b6">b6</string>
    <string name="b7">b7</string>
    <string name="b8">b8</string>
    <string name="c1">c1</string>
    <string name="c2">c2</string>
    <string name="c3">c3</string>
    <string name="c4">c4</string>
    <string name="c5">c5</string>
    <string name="c6">c6</string>
    <string name="c7">c7</string>
    <string name="c8">c8</string>
    <string name="d1">d1</string>
    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="d5">d5</string>
    <string name="d6">d6</string>
    <string name="d7">d7</string>
    <string name="d8">d8</string>
    <string name="e1">e1</string>
    <string name="e2">e2</string>
    <string name="e3">e3</string>
    <string name="e4">e4</string>
    <string name="e5">e5</string>
    <string name="e6">e6</string>
    <string name="e7">e7</string>
    <string name="e8">e8</string>
    <string name="f1">f1</string>
    <string name="f2">f2</string>
    <string name="f3">f3</string>
    <string name="f4">f4</string>
    <string name="f5">f5</string>
    <string name="f6">f6</string>
    <string name="f7">f7</string>
    <string name="f8">f8</string>
    <string name="g1">g1</string>
    <string name="g2">g2</string>
    <string name="g3">g3</string>
    <string name="g4">g4</string>
    <string name="g5">g5</string>
    <string name="g6">g6</string>
    <string name="g7">g7</string>
    <string name="g8">g8</string>
    <string name="h1">h1</string>
    <string name="h2">h2</string>
    <string name="h3">h3</string>
    <string name="h4">h4</string>
    <string name="h5">h5</string>
    <string name="h6">h6</string>
    <string name="h7">h7</string>
    <string name="h8">h8</string>
    <string name="playback1">Playback 1: N/A</string>
    <string name="playback2">Playback 2: N/A</string>
    <string name="playback3">Playback 3: N/A</string>
    <string name="playback4">Playback 4: N/A</string>
    <string name="playback5">Playback 5: N/A</string>
    <string name="playback6">Playback 6: N/A</string>
    <string name="record1">record1</string>
    <string name="record2">record2</string>
    <string name="record3">record3</string>
    <string name="record4">record4</string>
    <string name="record5">record5</string>
    <string name="record6">record6</string>
    <string name="finish">finish</string>
    <string name="src">src</string>
    <string name="start">Start</string>
    <string name="notavail">N/A</string>
    <string name="nextpage">Next\nPage</string>
    <string name="prevpage">Prev\nPage</string>
    <string name="sort1">Sort by Name</string>
    <string name="sort2">Sort by Date</string>
    <string name="close">Back</string>
</resources>
